# Projects

./: Cargo.toml  README.md
C/: README.md  pi.c
C/Numbers/: binaryconversion.c  changeReturn.c  fibonacci.c  nextPrime.c  primes.c  tile.c
C/Text/: countVowels.c  piglatin.c  reverseString.c
Graphics/: grayscale.py
Networking/: atomictime.py  geoip.py  geoip.rs  whois.py  whois.rs
Numbers/: alarmclock.py  binary.rs  binaryconverter.py  change.py  change.rb  fib.py  fib.rb  fib.rs  next_prime.rb  nextprime.py  pi.py  pi.rs  prime.rs  primes.py  tile.py
Python/: README.md
Python/Files/: file-copy.py
Python/Numbers/: calculator.py  creditcard.py  nextprime.py  pi.py  tile.py
Python/Text/: cdkey.py  checkpalindrome.py  reverse.py  wordsinstring.py
Text/: countvowels.rs  markup.rs  palindrome.rs  piglatin.py  piglatin.rs  reverse.rs  texttohtml.py  vowels.py  words.rs
src/: change.rs  cost.rs  fib.rs  primes.rs  test.rb
