[package]
name = "p"
version = "0.1.0"
authors = ["Joel Gallant <joel@joelgallant.me>"]

[dependencies]

[[bin]]
name = "pi"
path = "src/pi.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "primes"
path = "src/primes.rs"

[[bin]]
name = "prime"
path = "src/prime.rs"

[[bin]]
name = "cost"
path = "src/cost.rs"

[[bin]]
name = "change"
path = "src/change.rs"

[[bin]]
name = "binary"
path = "src/binary.rs"
