[package]
name = "p"
version = "0.1.0"
authors = ["Joel Gallant <joel@joelgallant.me>"]

[dependencies]

[[bin]]
name = "pi"
path = "Numbers/pi.rs"

[[bin]]
name = "fib"
path = "Numbers/fib.rs"

[[bin]]
name = "primes"
path = "Numbers/primes.rs"

[[bin]]
name = "prime"
path = "Numbers/prime.rs"

[[bin]]
name = "cost"
path = "Numbers/cost.rs"

[[bin]]
name = "change"
path = "Numbers/change.rs"

[[bin]]
name = "binary"
path = "Numbers/binary.rs"

[[bin]]
name = "reverse"
path = "Text/reverse.rs"

[[bin]]
name = "piglatin"
path = "Text/piglatin.rs"

[[bin]]
name = "countvowels"
path = "Text/countvowels.rs"

[[bin]]
name = "palindrome"
path = "Text/palindrome.rs"

[[bin]]
name = "words"
path = "Text/words.rs"
